--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nikitakodo/enqueue-wrapper",
+  "name": "mitinsany/enqueue-wrapper",
   "description": "simple enqueue wrapper for quick start with amqp-ext",
   "type": "library",
   "license": "GPL-3.0-or-later",
@@ -16,12 +16,12 @@
 
   },
   "require": {
-    "php": ">=7.4",
+    "php": "^7.4|^8.0",
     "ext-amqp": "*",
     "ext-json": "*",
     "ext-signal_handler": "*",
-    "enqueue/enqueue": "0.10.x-dev",
-    "enqueue/amqp-ext": "0.10.x-dev",
-    "enqueue/amqp-tools": "0.10.x-dev"
+    "enqueue/enqueue": "^0.10",
+    "enqueue/amqp-ext": "^0.10",
+    "enqueue/amqp-tools": "^0.10"
   }
 }
