--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       "email": "nikita.kodo@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "autoload": {
     "psr-4": { "Nikitakodo\\EnqueueWrapper\\": "src" },
     "exclude-from-classmap": ["/example/"]
