--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
 
   },
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^7.4",
     "ext-amqp": "*",
     "ext-json": "*",
     "ext-signal_handler": "*",
-    "enqueue/enqueue": "^0.10",
-    "enqueue/amqp-ext": "^0.10",
-    "enqueue/amqp-tools": "^0.10"
+    "enqueue/enqueue": "0.10.x-dev",
+    "enqueue/amqp-ext": "0.10.x-dev",
+    "enqueue/amqp-tools": "0.10.x-dev"
   }
 }
