--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
   "license": "GPL-3.0-or-later",
   "authors": [
     {
-      "name": "nikitakodo",
-      "email": "nikita.kodo@gmail.com"
+      "name": "MitinSany",
+      "email": "mitinoft@gmail.com"
     }
   ],
   "minimum-stability": "dev",
   "autoload": {
-    "psr-4": { "Nikitakodo\\EnqueueWrapper\\": "src" },
+    "psr-4": { "MitinSany\\EnqueueWrapper\\": "src" },
     "exclude-from-classmap": ["/example/"]
 
   },
